Maintenance, custom Arguments
- Addition of "maintenance" which allows blocking access to the launcher from the Internet during maintenance
- Addition of custom launch arguments